login, register, logout move to vuex

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Vuex Music</title>
   </head>
   <body class="bg-gray-100 pb-24">
     <noscript>
